--- a/finished_homework/dataVisualization/index.html
+++ b/finished_homework/dataVisualization/index.html
@@ -21,7 +21,10 @@
 
 <body>
     <h1>Data visualization</h1>
+    <a href="https://github.com/webDevAndres/wdv495/tree/master/finished_homework/dataVisualization" target="_blank" rel="noopener"><button>code</button></a>
     <h2>Us map: top 50 cities with most population</h2>
+    
+
     <script>
         // main svg element
         var width = 1000,
